# AEMOT

./: .gitignore  CMakeLists.txt  Classifier.cpp  Classifier.hpp  DataAssociation.cpp  DataAssociation.hpp  EventLoader.cpp  EventLoader.hpp  HighPassFilter.cpp  HighPassFilter.hpp  Kalman.cpp  Kalman.hpp  README.md  SAE.cpp  SAE.hpp  SAEdetector.cpp  SAEdetector.hpp  TrackManager.cpp  TrackManager.hpp  Visualiser.cpp  Visualiser.hpp  main.cpp  parameters.cpp  parameters.hpp
bee-cls-net/: convert_TorchScript.py  dataloader.py  inference.py  model.py  train.py
configs/: bees.yaml
torch_models/: bee_classifier.pt
